<?xml version="1.0" encoding="utf-8"?>
<!--
 * Sonet - Android Social Networking Widget
 * Copyright (C) 2009 Bryan Emmanuel
 * 
 * This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *  
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *  
 *  Bryan Emmanuel piusvelte@gmail.com
-->
<resources>
    <string name="app_name">Sonet</string>
    <string name="sonet_4x2">Sonet 4x2</string>
    <string name="sonet_4x3">Sonet 4x3</string>
    <string name="sonet_4x4">Sonet 4x4</string>
    <string name="loading">Loading&#8230;</string>
    <string name="updating">Updating content&#8230;</string>
    <string name="refreshing">Updating Sonet content&#8230;</string>
    <string name="no_connection">No connection</string>
    <string name="no_updates">No status updates</string>
    <string name="accounts_and_settings">Accounts \u0026 Settings</string>
    <string name="settings">Settings</string>
    <string name="accounts">Accounts</string>
    <string name="no_accounts">No accounts setup or enabled, press here to setup some.</string>
    <string name="button_post">Post</string>
    <string name="button_refresh">Update</string>
    <string name="button_add_account">Add Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="key_preferences">sonet</string>
    <string name="category_update">Update</string>
    <string name="interval">Update Interval</string>
    <string name="key_interval">interval</string>
    <string name="buttons_bg_color">Buttons Background Color</string>
    <string name="key_head_background">headBackground</string>
    <string name="buttons_color">Buttons Text Color</string>
    <string name="key_head_text">headText</string>
    <string name="message_bg_color">Messages Background Color</string>
    <string name="profile_bg_color">Profiles Background Color</string>
    <string name="friend_bg_color">Name Background Color</string>
    <string name="key_body_background">bodyBackground</string>
    <string name="message_color">Messages Text Color</string>
    <string name="buttons_textsize">Buttons Text Size</string>
    <string name="messages_textsize">Messages Text Size</string>
    <string name="friend_textsize">Name Text Size</string>
    <string name="created_textsize">Time Text Size</string>
    <string name="key_buttons_textsize">buttonsTextSize</string>
    <string name="key_messages_textsize">messagesTextSize</string>
    <string name="key_friend_textsize">nameTextSize</string>
    <string name="key_created_textsize">timeTextSize</string>
    <string name="key_body_text">bodyText</string>
    <string name="key_requesttoken">requesttoken</string>
    <string name="key_requestsecret">requestsecret</string>
    <string name="buttons_bg_clear">.</string>
    <string name="title_color_picker">Pick a color</string>
    <string name="category_buttons">Buttons</string>
    <string name="key_display_buttons">displayButtons</string>
    <string name="hasbuttons">Display Buttons</string>
    <string name="category_messages">Messages</string>
    <string name="key_friend_text">friendText</string>
    <string name="friend_color">Name Color</string>
    <string name="key_created_text">createdText</string>
    <string name="created_color">Time Color</string>
    <string name="key_time_12_24">time1224</string>
    <string name="time24hr">Use 24-hour format</string>
    <string name="category_time">Time</string>
	<string name="about">Sonet displays statuses from Twitter, Facebook, Buzz, MySpace, Foursquare, LinkedIn, SMS, RSS, Identi.ca, and Pinterest. The statuses can be displayed in the app, or as widgets on the homescreen. The colors and fonts can be customized in the settings. Please select Accounts from the menu and add an account.\u000A\u000ASonet - Android Social Networking Widget\u000A\u000ACopyright &#169; 2009 Bryan Emmanuel\u000A\u000AThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\u000A\u000AThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\u000A\u000AYou should have received a copy of the GNU General Public License along with this program.  If not, see \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
    <string name="widgets">Configure Widgets</string>
	<string name="refreshallwidgets">Update Widgets</string>
	<string name="timezone">Select Timezone</string>
	<string name="nowidgets">No Sonet widgets have been created.</string>
	<string name="defaultsettings">Default settings</string>
	<string name="re_authenticate">Re-authenticate</string>
	<string name="account_settings">Account settings</string>
	<string name="myspace_permissions_title">Update MySpace permissions</string>
	<string name="myspace_permissions_message">Please check that you allow Sonet to access and publish your status on the MySpace website.</string>
	<string name="icon">Include service icon</string>
	<string name="statuses_per_account">Statuses per account</string>
	<string name="background_update">Update when the screen is off</string>
	<string name="like">Like</string>
	<string name="unlike">Unlike</string>
	<string name="tweet">Tweet</string>
	<string name="retweet">Retweet</string>
	<string name="reply">Reply</string>
	<string name="comment">Comment</string>
	<string name="location">Location</string>
	<string name="send">Send</string>
	<string name="comments">Comments</string>
	<string name="no_comments">No comments</string>
	<string name="success">success</string>
	<string name="failure">failure</string>
	<string name="uncommentable">uncommentable</string>
	<string name="unlikable">unlikable</string>
	<string name="set_location">Set Location?</string>
	<string name="save">Save</string>
	<string name="location_unavailable">current location is unavailable</string>
	<string name="error_status">Error getting status info</string>
	<string name="messageWithCommentCount">%1$s\u000A%2$d comments</string>
	<string name="userProfile">Open %s\'s profile</string>
	<string name="about_title">About Sonet</string>
	<string name="enable">Enable Account</string>
	<string name="disable">Disable Account</string>
	<string name="widget_settings">Widget settings</string>
	<string name="oauth_error">Error connecting to %s, please check your internet connection.</string>
	<string name="comment_status">Comment on %s\'s status</string>
	<string name="update_status">Update your %s status</string>
	<string name="rss_url">Enter URL for RSS feed</string>
	<string name="rss_channel">Enter name for this RSS</string>
	<string name="repeat">Repeat</string>
	<string name="display_profile">Display Profile Pictures</string>
	<string name="clear">Clear</string>
	<string name="clear_all">Clear All</string>
	<string name="sound">Ring on notifications</string>
	<string name="vibrate">Vibrate on notifications</string>
	<string name="lights">Flash light on notifications</string>
	<string name="defaultwidgetsettings">Default widget settings</string>
	<string name="notifications">Notifications</string>
	<string name="no_notifications">no notifications</string>
	<string name="sending">Sending %s</string>
	<string name="friendcommented">%s commented on a status</string>
	<string name="instantupload">Upload new photos automatically</string>
	<string name="uploadprompt">Sonet: Upload photo?</string>
	<string name="margin">Widget Margin</string>
	<string name="googleplusbeta">Google\u002B currently allows reading of your own public posts only. Comments are not provided yet by Google. As new features are available from Google, they will be included in Sonet.</string>
	<string name="less_than">\u0020\u003c\u003c\u0020</string>
	<string name="greater_than">\u0020\u003e\u003e\u0020</string>
</resources>
