<?xml version="1.0" encoding="utf-8"?>
<!--
 * Sonet - Android Social Networking Widget
 * Copyright (C) 2009 Bryan Emmanuel
 * 
 * This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *  
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *  
 *  Bryan Emmanuel piusvelte@gmail.com
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/com.piusvelte.sonet"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<LinearLayout android:id="@+id/ad" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<ListView android:id="@android:id/list" android:layout_width="fill_parent"
		android:layout_height="0dip" android:layout_weight="0" />
	<TextView android:id="@android:id/empty" android:layout_width="fill_parent"
		android:layout_height="0dip" android:layout_weight="0"
		android:text="@string/no_comments" />
	<EditText android:id="@+id/message" android:layout_width="fill_parent"
		android:layout_height="0dip" android:gravity="top"
		android:layout_weight="1" />
	<RelativeLayout android:id="@+id/buttons"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Button android:id="@+id/send" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/send"
			android:layout_alignParentRight="true" />
		<Button android:id="@+id/count" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="0"
			android:layout_toLeftOf="@id/send" android:enabled="false" />
		<Button android:id="@+id/like" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/like"
			android:layout_alignParentLeft="true" android:layout_toLeftOf="@id/count"
			android:enabled="false" />
	</RelativeLayout>
</LinearLayout>
