<?xml version="1.0" encoding="utf-8"?>
<!--
 * Sonet - Android Social Networking Widget
 * Copyright (C) 2009 Bryan Emmanuel
 * 
 * This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *  
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *  
 *  Bryan Emmanuel piusvelte@gmail.com
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="16dip" >

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/buttons_bg_clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="4dip"
            android:text="@string/buttons_bg_clear"
            android:textColor="#00000000" />

        <TextView
            android:id="@+id/bg_clear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/buttons_bg_clear"
            android:height="0dip"
            android:textColor="#00000000" />

        <ImageView
            android:id="@+id/buttons_bg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/bg_clear"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/button_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:padding="4dip"
            android:text="@string/button_post"
            android:textColor="@color/default_buttons_color" />

        <TextView
            android:id="@+id/button_configure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/button_post"
            android:clickable="true"
            android:padding="4dip"
            android:text="@string/settings"
            android:textColor="@color/default_buttons_color" />

        <TextView
            android:id="@+id/button_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/button_configure"
            android:clickable="true"
            android:padding="4dip"
            android:text="@string/button_refresh"
            android:textColor="@color/default_buttons_color" />

        <TextView
            android:id="@+id/page_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:padding="4dip"
            android:text="@string/greater_than"
            android:textColor="@color/default_buttons_color" />

        <TextView
            android:id="@+id/page_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/page_down"
            android:clickable="true"
            android:padding="4dip"
            android:text="@string/less_than"
            android:textColor="@color/default_buttons_color" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/messages"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/buttons"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/item0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/friend_bg_clear0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="48dip"
                android:paddingBottom="4dip"
                android:paddingLeft="4dip"
                android:paddingTop="4dip"
                android:singleLine="true"
                android:textColor="#00000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message_bg_clear0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/friend_bg_clear0"
                android:layout_marginLeft="48dip"
                android:paddingBottom="4dip"
                android:paddingLeft="4dip"
                android:paddingRight="4dip"
                android:textColor="#00000000" />

            <TextView
                android:id="@+id/bg_clear0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/message_bg_clear0"
                android:height="0dip"
                android:textColor="#00000000" />

            <ImageView
                android:id="@+id/profile_bg0"
                android:layout_width="48dip"
                android:layout_height="fill_parent"
                android:layout_above="@id/bg_clear0"
                android:layout_alignParentLeft="true"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/friend_bg0"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_above="@id/message_bg_clear0"
                android:layout_toRightOf="@id/profile_bg0"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/status_bg0"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_above="@id/bg_clear0"
                android:layout_below="@id/friend_bg0"
                android:layout_toRightOf="@id/profile_bg0"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/profile0"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/friend0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginRight="4dip"
                android:layout_toRightOf="@id/profile0"
                android:paddingBottom="4dip"
                android:paddingLeft="4dip"
                android:paddingTop="4dip"
                android:singleLine="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/created0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/friend0"
                android:gravity="right"
                android:paddingRight="4dip"
                android:paddingTop="4dip"
                android:singleLine="true" />

            <TextView
                android:id="@+id/message0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/friend0"
                android:layout_toRightOf="@id/profile0"
                android:paddingBottom="4dip"
                android:paddingLeft="4dip"
                android:paddingRight="4dip"
                android:text="@string/loading"
                android:textColor="@color/default_message_color" />

            <ImageView
                android:id="@+id/icon0"
                android:layout_width="16dip"
                android:layout_height="16dip"
                android:layout_alignBottom="@id/message_bg_clear0"
                android:layout_alignParentRight="true"
                android:paddingBottom="4dip"
                android:paddingRight="4dip" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>